SERVER-57143 fix uninitialized scalar field